[package]
name = "ismp_viewer"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main_backend.rs"
required-features = ["backend"]

[dependencies]
leptos = { version = "0.8.10", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"
gloo-net = "0.4"
hex = "0.4"

# Backend dependencies (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1.36", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

# Blockchain dependencies (backend only)
subxt = { version = "0.35.0", optional = true }
codec = { package = "parity-scale-codec", version = "3.6", features = ["derive"], optional = true }
scale-info = { version = "2.11", features = ["derive"], optional = true }
ethers = { version = "2.0", optional = true }
lazy_static = { version = "1.4", optional = true }
futures = { version = "0.3", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
async-trait = { version = "0.1", optional = true }

[features]
default = []
backend = ["axum", "tokio", "tower", "tower-http", "tracing", "tracing-subscriber", "subxt", "codec", "scale-info", "ethers", "lazy_static", "futures", "reqwest", "async-trait"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
